# capital-markets-toolbox

./: .gitignore  INSTALL.md  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
connector/: manifest.json
docs/: for-friends-install.md  for-maintainers-deploy.md  troubleshooting.md
mcp/secforms-db/: .env.example  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
mcp/secforms-db/coolify/: deploy-notes.md
mcp/secforms-db/docs/: operating.md  threat-model.md  tool-surface.md
mcp/secforms-db/setup/: 01_create_role.sql  02_verify.sql  apply.sh
mcp/secforms-db/src/secforms_mcp/: config.py  db.py  guard.py  oauth.py  server.py
mcp/secforms-db/src/secforms_mcp/tools/: query.py  schema.py
mcp/secforms-db/tests/: test_auth.py  test_guard.py
skills/secforms-db/: SKILL.md
skills/secforms-db/reference/: erd.md  form-tables.md  identifiers.md  mcp-usage.md  overview.md  query-advisor.md  query-recipes.md  schema.dbml  schema.md  schema.sql
skills/secforms-db/scripts/: refresh-schema.sh
