[project]
name = "secforms-mcp"
version = "0.1.0"
description = "Read-only MCP server for the secforms (SEC filings) Postgres database."
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0.0",
  "asyncpg>=0.29.0",
  "pglast>=6.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "uvicorn[standard]>=0.30.0",
  "starlette>=0.37.0",
  "pyjwt>=2.9.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secforms_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
